--- a/app/styles/components/sign-in-or-up.scss
+++ b/app/styles/components/sign-in-or-up.scss
@@ -7,5 +7,7 @@
   .container {
     width: 100%;
     max-width: 350px;
+    border: 1px solid map-get($colors, lightgray);
+    padding: 1rem;
   }
 }
