--- a/app/styles/elements/forms.scss
+++ b/app/styles/elements/forms.scss
@@ -1,5 +1,3 @@
-$border-color: #dee2e6;
-
 form {
   legend {
     font-size: 1.5rem;
@@ -9,20 +7,25 @@ form {
 }
 
 textarea {
-  height: 200px;
+  height: 100px;
 }
 
 .form-group {
-  padding: 1rem 0;
+  margin-bottom: 1rem;
 
-  & + .form-group {
-    border-top: 1px solid $border-color;
+  + .form-group {
+    padding-top: 1rem;
+    border-top: 1px solid map-get($colors, lightgray);
   }
 
-  & > label {
+  &:last-child {
+
+  }
+
+  label {
     display: block;
     font-weight: bold;
-    margin-bottom: 0.5em;
+    margin-bottom: 0.75em;
   }
 }
 
@@ -36,7 +39,7 @@ textarea {
   width: 100%;
 
   &::placeholder {
-    color: #adb5bd;
+    color: map-get($colors, mediumgray);;
     font-weight: lighter;
   }
 }
