--- a/app/styles/components/sign-in-or-up.scss
+++ b/app/styles/components/sign-in-or-up.scss
@@ -5,6 +5,7 @@
   justify-content: center;
 
   .container {
+    margin-top: 2rem;
     width: 100%;
     max-width: 350px;
     border: 1px solid map-get($colors, lightgray);
